<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.leeeyou.source.code.analysis.recyclerview.MainActivity">
    <item
        android:id="@+id/action_VerticalLinearLayout"
        android:orderInCategory="100"
        android:title="@string/action_VerticalLinearLayout"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_HorizontalLinearLayout"
        android:orderInCategory="100"
        android:title="@string/action_HorizontalLinearLayout"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_VerticalGridLayout"
        android:orderInCategory="100"
        android:title="@string/action_VerticalGridLayout"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_HorizontalGridLayout"
        android:orderInCategory="100"
        android:title="@string/action_HorizontalGridLayout"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_VerticalStaggeredGridLayout"
        android:orderInCategory="100"
        android:title="@string/action_VerticalStaggeredGridLayout"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_HorizontalStaggeredGridLayout"
        android:orderInCategory="100"
        android:title="@string/action_HorizontalStaggeredGridLayout"
        app:showAsAction="never"/>
</menu>
